--- a/public/css/components/footer.css
+++ b/public/css/components/footer.css
@@ -10,7 +10,8 @@ footer {
     align-items: center;
 }
 
-footer p, a {
+footer p,
+footer a {
     margin: 0 40px;
     color: var(--primary-color);
 }
@@ -20,7 +21,7 @@ footer a {
 }
 
 footer a:hover {
-   color: black;
+    color: black;
 }
 
 footer img {
@@ -28,10 +29,11 @@ footer img {
 }
 
 @media only screen and (max-width: 600px) {
-  footer {
-    flex-direction: column;
-  }
-  footer a, p {
-      margin: 0 30px;
-  }
-} 
+    footer {
+        flex-direction: column;
+    }
+    footer a,
+    p {
+        margin: 0 30px;
+    }
+}
