--- a/public/css/users/sign_in.css
+++ b/public/css/users/sign_in.css
@@ -1,29 +1,24 @@
 .sign-in-form-container {
-  border: solid var(--primary-color) 3px;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 400px !important;
+    border: solid var(--primary-color) 3px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 400px !important;
 }
 
 .under-container {
-  display: flex;
+    display: flex;
 }
 
 .sign-in-form-container div {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 }
-.sign-in-form-container input, label, p {
-  font-size: 16px;
-  color: var(--primary-color);
-}
-
-h1 {
-  margin-top: 40px;
-  font-size: 32px;
-  color: var(--primary-color);
-  text-align: center;
+.sign-in-form-container input,
+.sign-in-form-container label,
+.sign-in-form-container p {
+    font-size: 16px;
+    color: var(--primary-color);
 }
