--- a/public/css/users/sign_up.css
+++ b/public/css/users/sign_up.css
@@ -1,36 +1,24 @@
-.main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-
 .sign-up-form-container {
-  border: solid var(--primary-color) 3px;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 400px !important;
+    border: solid var(--primary-color) 3px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px !important;
 }
 
 .sign-up-form-container div {
-  margin-bottom: 20px;
-  text-align: center;
+    margin-bottom: 20px;
+    text-align: center;
 }
-.sign-up-form-container input, label, p {
-  font-size: 16px;
-  color: var(--primary-color);
-}
-
-h1 {
-  font-size: 32px;
-  color: var(--primary-color);
-  text-align: center;
+.sign-up-form-container input,
+.sign-up-form-container label,
+.sign-up-form-container p {
+    font-size: 16px;
+    color: var(--primary-color);
 }
 
 .error-message {
-  color: red;
+    color: red;
 }
